<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="187dp"
    android:orientation="vertical"
    android:weightSum="4"
    tools:ignore="RtlSymmetry,NestedWeights"
    tools:viewBindingIgnore="true">

    <Button
        android:id="@+id/gridSwitch"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/thimble_ic_grid"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/thimble_overlay_title_grid"
        android:textAppearance="@style/TextAppearance.Compat.Notification" />

    <Button
        android:id="@+id/mockupSwitch"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/thimble_ic_mockup"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/thimble_overlay_title_mockup"
        android:textAppearance="@style/TextAppearance.Compat.Notification" />

    <Button
        android:id="@+id/magnifierSwitch"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/thimble_ic_magnifier"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/thimble_overlay_title_magnifier"
        android:textAppearance="@style/TextAppearance.Compat.Notification" />

    <Button
        android:id="@+id/recorderSwitch"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/thimble_ic_recorder"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/thimble_overlay_title_recorder"
        android:textAppearance="@style/TextAppearance.Compat.Notification" />

</LinearLayout>