<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/thimble_activity_thimble">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/thimble_card_margin"
        app:cardCornerRadius="@dimen/thimble_card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/magnifierSwitch"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:layout_marginStart="@dimen/thimble_title_margin"
                android:layout_marginEnd="@dimen/thimble_title_margin"
                android:enabled="false"
                android:text="@string/thimble_overlay_title_magnifier"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/thimble_description_margin"
                android:layout_marginTop="@dimen/thimble_description_margin"
                android:layout_marginEnd="@dimen/thimble_description_margin"
                android:text="@string/thimble_overlay_description_magnifier"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/thimble_section_title_margin"
                android:layout_marginTop="@dimen/thimble_section_title_margin_top"
                android:layout_marginEnd="@dimen/thimble_section_title_margin"
                android:text="@string/thimble_overlay_option_title_color_model"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/colorModelToggleGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/thimble_section_option_margin"
                android:layout_marginTop="@dimen/thimble_section_option_margin_top"
                android:layout_marginEnd="@dimen/thimble_section_option_margin"
                android:layout_marginBottom="@dimen/thimble_section_option_margin"
                android:weightSum="3"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/hexButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/thimble_option_color_model_hex" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/rgbButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/thimble_option_color_model_rgb" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/hsvButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/thimble_option_color_model_hsv" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>